--- a/PetAdoption-iOS/Podfile
+++ b/PetAdoption-iOS/Podfile
@@ -6,10 +6,12 @@ platform :ios, '9.0'
 target 'PetAdoption-iOS' do
   pod 'Alamofire', '~> 4.5'
   pod 'AlamofireImage', '~> 3.3'
+  pod 'SwiftyJSON'
 end
 
 target 'PetAdoptionTransportKit' do
   pod 'Alamofire', '~> 4.5'
   pod 'AlamofireImage', '~> 3.3'
+  pod 'SwiftyJSON'
 end
 
