--- a/PetAdoption-iOS/Podfile
+++ b/PetAdoption-iOS/Podfile
@@ -7,6 +7,8 @@ target 'PetAdoption-iOS' do
   pod 'Alamofire', '~> 4.5'
   pod 'AlamofireImage', '~> 3.3'
   pod 'SwiftyJSON'
+  pod 'Fabric'
+  pod 'Crashlytics'
 end
 
 target 'PetAdoptionTransportKit' do
